# zerowaste-bootstrap

./: .gitignore  README.md  modal_train.py  pyproject.toml
tests/: __init__.py  conftest.py  test_augmentation.py  test_cli.py  test_config.py  test_data.py  test_dataset.py  test_evaluation.py  test_model.py  test_pseudo_label.py
zerowaste_bootstrap/: __init__.py  cli.py  config.py
zerowaste_bootstrap/data/: __init__.py  augmentation.py  dataset.py  download.py
zerowaste_bootstrap/evaluation/: __init__.py  compare.py  metrics.py  visualize.py
zerowaste_bootstrap/modeling/: __init__.py  model.py  trainer.py
zerowaste_bootstrap/pseudo_label/: __init__.py  filter.py  generate.py
